--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <img src="images/MacNuggetGameTextButton.png" alt="First Episode of McNugget Dating Show" title="First Episode of McNugget Dating Show">
                 <figcaption>McNugget dating show</figcaption>
             </figure>
+            <figure>
+                <img src="images/ChildsWeddingAtTheFirstSightTextButton.png" alt="First Episode of Wedding At The First Sight Child Edition" title="First Episode of Wedding At The First Sight Child Edition">
+                <figcaption>Child Weddings</figcaption>
+            </figure>
         </section>
         <footer>
             main street notmy adress, IL • 333-333-3333 • (don't call me) • notmy@gmail.com
