--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </figure>
         </section>
         <footer>
-            main street notmy adress, IL • 333-333-3333 • (don't call me) • notmy@gmail.com
+            Pravicy(None) • Cookie Preferences(None) • Security Policy(None)
         </footer>
     </body>
 </html>
