--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
                 <ul>
                     <li class="logo"><a href="index.html">Petrflix Logo</a></li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="locations.html">Locations</a></li>
-                    <li><a href="contact.html">Contact</a> </li>
-                    <li class="signUp"><a href="index.html">Sing Up</a></li>
+                    <li><a href="menu.html">Shows</a></li>
+                    <li><a href="locations.html">Movies</a></li>
+                    <li><a href="contact.html">Log In</a> </li>
+                    <li class="signUp"><a href="index.html">Sign Up</a></li>
                 </ul>
             </nav>
         </header>
